added calculated fields including the future value of the annuity

--- a/app/views/advances/edit.html.erb
+++ b/app/views/advances/edit.html.erb
@@ -17,4 +17,4 @@
 <% end %>
 
 <%= link_to 'Show', @advance %> |
-<%= link_to 'Back', advances_path %>
+<%= link_to 'Back', loan_advances_path(@loan) %>
