--- a/app/views/advances/new.html.erb
+++ b/app/views/advances/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New advance</h1>
 
-<% form_for(@advance) do |f| %>
+<% form_for(:loan, @advance) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', advances_path %>
+<%= link_to 'Back', loan_advances_path(@loan) %>
