--- a/app/views/advances/show.html.erb
+++ b/app/views/advances/show.html.erb
@@ -9,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_advance_path(@advance) %> |
-<%= link_to 'Back', advances_path %>
+<%= link_to 'Edit', edit_loan_advance_path(@loan, @advance) %> |
+<%= link_to 'Back', loan_advances_path %>
