--- a/app/views/advances/new.html.erb
+++ b/app/views/advances/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New advance</h1>
 
-<% form_for(:loan, @advance) do |f| %>
+<% form_for :advance, :url => {:action => 'create'} do |f| %>
   <%= f.error_messages %>
 
   <p>
