--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -1,16 +1,16 @@
-<h1>Listing loans</h1>
+<h1>Your Loans</h1>
 
 <table>
   <tr>
-    <th>Start</th>
+    <th>Starting Date</th>
     <th>Principal</th>
-    <th>Interest</th>
-    <th>Period</th>
-    <th>Repayment</th>
-	<th>Total Paid</th>
-	<th>Total Interest</th>
-	<th>Future Value</th>
-	<th colspan="3">Actions</th>
+    <th>Annual Interest Rate</th>
+    <th>Compounding Periods</th>
+    <th>Monthly Repayment</th>
+    <th>Total Paid</th>
+    <th>Total Interest</th>
+    <th>Future Value</th>
+    <th>Actions</th>
   </tr>
 
 <% for loan in @loans %>
@@ -19,17 +19,17 @@
     <td><%=h loan.principal %></td>
     <td><%=h loan.annual_interest %></td>
     <td><%=h loan.compounding_periods %></td>
-    <td><%=h loan.repayment %></td>
-    <td><%=h (loan.compounding_periods * loan.repayment) %></td>
-    <td><%=h (loan.compounding_periods * loan.repayment) - loan.principal %></td>
-	<td><%=h loan.future_value %></td>
-    <td><%= link_to 'Show', loan %></td>
-    <td><%= link_to 'Edit', edit_loan_path(loan) %></td>
-    <td><%= link_to 'Destroy', loan, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%=h sprintf("%0.2f", loan.repayment) %></td>
+    <td><%=h sprintf("%0.2f", (loan.compounding_periods * loan.repayment)) %></td>
+    <td><%=h sprintf("%0.2f", (loan.compounding_periods * loan.repayment) - loan.principal) %></td>
+    <td><%=h sprintf("%0.2f", loan.future_value) %></td>
+    <td><%= link_to 'Schedule', loan_schedule_path(loan, nil) %><br/>
+        <%= link_to 'Edit', edit_loan_path(loan) %><br/>
+    </td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New loan', new_loan_path %>
+<%= link_to 'Model a New Loan', new_loan_path %>
