adding in the temper style for morty. looking good :)

--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -24,7 +24,7 @@
       <div align="justify">understanding and experimenting with loans</div>
     </div>
     <div class="body_textarea">
-      <div align="justify">
+      <div align="left">
         <p style="color: green"><%= flash[:notice] %></p>
         <%= yield  %>
       </div>
