--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -229,8 +229,8 @@ ul{
 
 /*------------------------------------------------body_area--------------------*/
 #body_area{
-	width:1004px;
-	height:820px;
+	width:100%;
+	height:680px;
 	margin-top: 0;
 	margin-right: auto;
 	margin-bottom: 0;
@@ -245,7 +245,7 @@ ul{
 	color: #dcd66e;
 	text-decoration: none;
 	float: none;
-	padding-top: 52px;
+	padding-top: 0px;
 	padding-right: 0px;
 	padding-bottom: 0px;
 	padding-left: 0px;
@@ -255,8 +255,7 @@ ul{
 .midarea {
 	margin: 0px;
 	float: left;
-	height: 820px;
-	width: 543px;
+	height: 520px;
 	padding-top: 0px;
 	padding-right: 0px;
 	padding-bottom: 0px;
@@ -274,7 +273,7 @@ ul{
 	width: 540px;
 	padding-top: 0px;
 	padding-right: 0px;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 	padding-left: 0px;
 }
 .body_textarea {
@@ -285,7 +284,7 @@ ul{
 	text-decoration: none;
 	margin: 0px;
 	float: left;
-	width: 500px;
+	width: 900px;
 	padding-top: 0px;
 	padding-right: 0px;
 	padding-bottom: 10px;
