--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -19,7 +19,7 @@
  </div>
 <div id="body_area">
   <div class="midarea">
-    <div class="head">An Amortized Experience</div>
+    <div class="head">Amortized Learning</div>
     <div class="body_textarea">
       <div align="justify">understanding and experimenting with loans</div>
     </div>
