--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -16,8 +16,8 @@
 <% for loan in @loans %>
   <tr>
     <td><%=h loan.start %></td>
-    <td><%=h loan.principal %></td>
-    <td><%=h loan.annual_interest %></td>
+    <td><%=h sprintf("%0.2f", loan.principal) %></td>
+    <td><%=h sprintf("%0.2f", loan.annual_interest) %></td>
     <td><%=h loan.compounding_periods %></td>
     <td><%=h sprintf("%0.2f", loan.repayment) %></td>
     <td><%=h sprintf("%0.2f", (loan.compounding_periods * loan.repayment)) %></td>
