morty logo links back home

--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -19,7 +19,7 @@
 
 <body>
  <div id="topheader">
-   <div class="logo"></div>
+   <a href="/"><div class="logo"></div></a>
     <div class="menu_area">
 	<a href="/content.htm#learn" onclick="return hs.htmlExpand(this, { contentId: 'highslide-html-ajax',
 				wrapperClassName: 'highslide-white',
