--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Morty</title>
-  <%= stylesheet_link_tag 'style', 'highslide' %>
+  <%= stylesheet_link_tag 'style', 'scaffold', 'highslide' %>
   <%= javascript_include_tag "prototype", "flotr", "highslide" %>
 
 <script type="text/javascript">
