don't use sql reserved words for column names

--- a/app/views/advances/edit.html.erb
+++ b/app/views/advances/edit.html.erb
@@ -4,8 +4,8 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :when %><br />
-    <%= f.date_select :when %>
+    <%= f.label :dop %><br />
+    <%= f.date_select :dop %>
   </p>
   <p>
     <%= f.label :amount %><br />
