--- a/app/views/savings/index.html.erb
+++ b/app/views/savings/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing the saving for Advance <%= "#{@advance.when} of #{@advance.amount}" %></h1>
+<h1>Listing the saving for Advance <%= "#{@advance.dop} of #{@advance.amount}" %></h1>
 
 <table>
   <tr>
